add article validation and user login

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,6 +10,12 @@
   </head>
 
   <body>
+    <%= flash[:notice] %>
+    <%= flash[:success] %>
+    <%= flash[:warning] %>
+    <%= @jwt %>
+    <a href="/login">Log In</a>
+    <a href="/logout" data-method="delete">Log Out</a>
     <%= yield %>
   </body>
 </html>
