--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,10 +1,4 @@
-<p id="notice"><%= notice %></p>
-
-<p>
-  <strong>Name:</strong>
-  <%= @article.name %>
-</p>
-
+<h2>Viewing an article</h2>
 <p>
   <strong>Title:</strong>
   <%= @article.title %>
