--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,4 @@
 <h1>Home</h1>
 
-<%= link_to 'Articles', articles_path %>
+<%= link_to 'Articles', articles_path %> |
 <%= link_to 'About', pages_about_path %>
-<br>
-<%= link_to image_tag('0.jpeg') %>
