--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,4 +1,6 @@
-<h1>Home</h1>
-
-<%= link_to 'Articles', articles_path %> |
-<%= link_to 'About', pages_about_path %>
+<%= render 'layouts/header' %>
+<%= render 'layouts/messages' %>
+<div class="container">
+  
+  <p>Put stuff here</p>
+</div>
