--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,4 +1,5 @@
 <h1>SignUp</h1>
+<%= render 'layouts/messages' %>
 <%= form_tag '/users', method: :post do %>
 
   username: <input type="text" name="username">
