--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -13,3 +13,11 @@
  */
 
 @import 'bootstrap';
+
+.header-img {
+  width: 100%;
+  height: 250px;
+  object-fit: cover;
+  object-position: 10%;
+}
+
