--- a/app/views/articles/edit.html.erb
+++ b/app/views/articles/edit.html.erb
@@ -1,5 +1,5 @@
 <h2>Editing Article</h2>
-
+<%= render 'layouts/messages' %>
 <%= render 'form', article: @article %>
 
 <%= link_to 'Show', @article %> |
