bunch of stuff, can't remember

--- a/app/views/articles/show.html.erb
+++ b/app/views/articles/show.html.erb
@@ -1,4 +1,5 @@
-<%= render 'layouts/messages' %>
+<%= render 'shared/flash' %>
+<%= render 'shared/errors', obj: @article %>
 <h2>Viewing an article</h2>
 <p>
   <strong>Title:</strong>
