--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -1,6 +1,6 @@
-<%= render 'layouts/header' %>
-<%= render 'layouts/messages' %>
+<%= render 'shared/header' %>
+<%= render 'shared/flash' %>
 <div class="container">
-  
+  <%= @jwt %>
   <p>Put stuff here</p>
 </div>
