--- a/app/views/users/new.html.erb
+++ b/app/views/users/new.html.erb
@@ -1,7 +1,9 @@
 <h1>SignUp</h1>
-<%= render 'layouts/messages' %>
-<%= form_tag '/users', method: :post do %>
+<%= render 'shared/flash' %>
+<%= render 'shared/errors', obj: @user %>
 
+<%= form_tag '/users', method: :post do %>
+  
   username: <input type="text" name="username">
   password: <input type="password" name="password">
   confirm password: <input type="password" name="password_confirmation">
