--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -12,6 +12,6 @@
 <body>
   <%= render 'layouts/navigation' %>
   <%= yield %>
-  
+  <%= debug(params) if Rails.env.development? %> 
 </body>
 </html>
