--- a/app/views/layouts/_navigation.html.erb
+++ b/app/views/layouts/_navigation.html.erb
@@ -5,7 +5,7 @@
   </button>
   <div class="collapse navbar-collapse" id="navbarNav">
     <ul class="navbar-nav">
-      <li class="nav-item active">
+      <li class="nav-item">
         <%= link_to "Home", root_path, class: "nav-link" %>
       </li>
       <li class="nav-item">
@@ -16,14 +16,29 @@
       </li>
     </ul>
     <ul class="navbar-nav ml-auto">
-      <li class="nav-item">
-        <a class="nav-link" href="/signup">Sign Up</a>
-      </li>
-      <li class="nav-item">
-        <a class="nav-link" href="/login">Log In</a>
-      <li class="nav-item">
-        <a class="nav-link" href="/logout" data-method="delete">Log Out</a>
-      </li>
+      <
+      <% if logged_in? %>
+        <li class="nav-item dropdown">
+          <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+            User
+          </a>
+          <div class="dropdown-menu" aria-labelledby="navbarDropdown">
+            <%= link_to "Profile", user_path(current_user), class: "dropdown-item" %> 
+            <div class="dropdown-divider"></div>
+            <%= link_to "Edit Profile", edit_user_path(current_user), class: "dropdown-item" %>             
+          </div>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/logout" data-method="delete">Log Out</a>
+        </li>
+      <% else %>
+        <li class="nav-item">
+          <a class="nav-link" href="/login">Log In</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="/signup">Sign Up</a>
+        </li>
+      <% end %>
     </ul>
   </div>
 </nav>
